Created React-Native Expo project in /src/javascript Updated gitignore with javascript specific entries

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .env
 .vscode
 
+# Node packages
+src/javascript/node_modules
+
 # Jetbrains recommended gitignore
 # User-specific stuff
 .idea/**/workspace.xml
