--- a/src/javascript/.gitignore
+++ b/src/javascript/.gitignore
@@ -1,5 +1,6 @@
 node_modules/
 .expo/
+.expo-shared/
 dist/
 npm-debug.*
 *.jks
@@ -15,3 +16,33 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Logs
+*.log
+logs
+*.logfile
+
+# Builds
+android/app/build/
+ios/build/
+ios/Pods/
+
+# Dependency locks
+yarn.lock
+package-lock.json
+
+# Xcode files
+*.xcuserstate
+*.xcworkspace
+*.xcodeproj
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+
+# Android Studio files
+*.iml
+*.idea/
+
+# Miscellaneous
+.DS_Store
